api5-odata/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odata-api
  namespace: sample-apis
  labels:
    app: odata-api
spec:
  selector:
    app: odata-api
  ports:
    - name: http
      port: 3003
      targetPort: 3003
      protocol: TCP
  type: ClusterIP
